--- a/Week 02/v1.html
+++ b/Week 02/v1.html
@@ -42,6 +42,7 @@
       for (let j = 0; j < 100; j++) {
         const cell = document.createElement("div")
         cell.classList.add("cell")
+        cell.classList.add(`no${i * 100 + j}`)
 
         if (map[i * 100 + j] == 1) {
           cell.style.backgroundColor = "black"
@@ -79,15 +80,17 @@
     document.addEventListener("contextmenu", e => e.preventDefault())
     
 
-    function path (map, start, end) {
+    async function path (map, start, end) {
       // BFS
       const queue = [start]
 
-      function insert(x, y) {
+      async function insert(x, y) {
         if (x < 0 | x >= 100 || y < 0 || y >= 100) return
         // 如果访问过，或者是墙，则跳过当前点
         if (map[x * 100 + y]) return
 
+        await sleep(30)
+        document.getElementsByClassName(`no${x*100 + y}`)[0].style.backgroundColor = "lightgreen"
         // 标记为访问过的结点，或者使用 Set 来缓存访问过的点
         map[x * 100 + y] = 2
         queue.push([x, y])
@@ -99,11 +102,15 @@
         if (x == end[0] && y == end[1]) {
           return true
         }
-        insert(x - 1, y)
-        insert(x + 1, y)
-        insert(x, y - 1)
-        insert(x, y + 1)
+        await insert(x - 1, y)
+        await insert(x + 1, y)
+        await insert(x, y - 1)
+        await insert(x, y + 1)
       }
+    }
+
+    function sleep (v) {
+      return new Promise((reslove, reject) => setTimeout(reslove, v))
     }
   </script>
 
